# autonomka_vvs

./: .gitignore  .gitmodules  README.md  rviz_config.rviz
ros2_ws/src/behavior_server/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/behavior_server/behavior_server/: behavior_server_node.py  path_follower_pid_node.py
ros2_ws/src/bringup/: package.xml  setup.py
ros2_ws/src/bringup/launch/: main_start.launch.py  robot_moving_testing.launch.py
ros2_ws/src/dwa_battle_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/dwa_battle_planner/dwa_battle_planner/: dwa_planner_node.py  robot_pose_test.py
ros2_ws/src/image_undistort/: package.xml  setup.cfg  setup.py
ros2_ws/src/image_undistort/calibration/: camera_1_calibration.npz
ros2_ws/src/image_undistort/image_undistort/: aruco_detector_single.py  debug_tracker.py  detector.py  image_click_coordinator.py  morph_detector_node.py  undistort_node.py  usb_cam_undistort_node.py
ros2_ws/src/image_undistort/launch/: aruco_detection_dual.launch.py  dual_undistort.launch.py  full_system.launch.py  multi_camera_launch.py  single_camera_debug.launch.py
ros2_ws/src/joy_controller/: package.xml  setup.py
ros2_ws/src/joy_controller/joy_controller/: joy_controller_node.py
ros2_ws/src/simple_robot_sim/: package.xml  setup.py
ros2_ws/src/simple_robot_sim/config/: params.yaml
ros2_ws/src/simple_robot_sim/launch/: sim.launch.py  test.launch.py
ros2_ws/src/simple_robot_sim/simple_robot_sim/: data_publisher_node.py  robot.py  simulator_node.py  test_cmd_vel_publisher.py
ros2_ws/src/teleop_keyboard/: package.xml  setup.py
ros2_ws/src/teleop_keyboard/teleop_keyboard/: teleop_keyboardpy.py
ros2_ws/src/vel_to_sticks/: package.xml  setup.cfg  setup.py
ros2_ws/src/vel_to_sticks/launch/: vel_to_sticks.launch.py
ros2_ws/src/vel_to_sticks/vel_to_sticks/: vel_to_sticks.py  vel_to_sticks_cnannels.py
ros2_ws/src/weapon_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/weapon_controller/weapon_controller/: weapon_controller_node.py
