<?xml version="1.0"?>
<package format="3">
  <name>behavior_server</name>
  <version>0.0.1</version>
  <description>PID path follower server for following nav_msgs/Path.</description>
  <maintainer email="sashakulagin2007@gmail.com">Alexander Kulagin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
